--- a/index_backup1.html
+++ b/index_backup1.html
@@ -429,7 +429,7 @@
              <li data-symbol="ga" aria-label="atomic symbol G a" class="bigfont2">G<span class="letter-tight">a</span></li>
              <li data-element="gallium"><span class="bigfont1" aria-label="element">Gallium</span></li>
              <li data-weight="69.723"><span class="bigfont1" aria-label="standard atomic weight 69 . 7 2 3">69.723</span></li>
-             <li data-groundstate="gallium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="gallium"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p</span></li>
              <li data-ev="5.9993"><span class="bigfont1" aria-label="ionization energy 5 . 9 9 9 3">5.9993</span></li> 
           </ul>
        </td>
