--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1332,8 +1332,9 @@
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
         Content: 6 February 2020<br />
-        WebAim: 27 January 2020 0<br />
+        WebAim: 6 February 2020 0<br />
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
+        Note: Speech Synthesis referenced in builing this page https://www.w3.org/TR/speech-synthesis11/#S1.1<br />
         Note: Pronunciation referenced in builing this page SSML wiki at https://github.com/w3c/pronunciation/wiki<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
