--- a/index.html
+++ b/index.html
@@ -1336,6 +1336,7 @@
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note: Speech Synthesis referenced in builing this page https://www.w3.org/TR/speech-synthesis11/#S1.1<br />
         Note: Pronunciation referenced in builing this page SSML wiki at https://github.com/w3c/pronunciation/wiki<br />
+        Note: aural has been scrapped See https://www.w3.org/TR/css3-speech/ <br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
         ToDo: Fix CU and Ni (28 and 29)<br />
