--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
              <li data-symbol="zr" aria-label="atomic symbol Z r" class="bigfont2">Z<span class="letter-tight">r</span></li>
              <li data-element="zirconium"><span class="bigfont1" aria-label="element">Zirconium</span></li>
              <li data-weight="91.224"><span class="bigfont1" aria-label="standard atomic weight 91 . 2 2 4">91.224</span></li>
-             <li data-groundstate="zirconium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="zirconium"><span class="bigfont1" aria-label="ground [Kr]4d25s2">[Kr]4d<sup>2</sup>5s<sup>2</sup></span></li>
              <li data-ev="6.6341"><span class="bigfont1" aria-label="ionization energy 6 . 6 3 4 1">6.6341</span></li> 
           </ul>
        </td>
@@ -1331,7 +1331,7 @@
  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 6 February 2020<br />
+        Content: 11 February 2020<br />
         WebAim: 6 February 2020 0<br />
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note: Speech Synthesis referenced in builing this page https://www.w3.org/TR/speech-synthesis11/#S1.1<br />
