--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
              <li data-symbol="y" aria-label="atomic symbol Y" class="bigfont2">Y<span class="letter-tight">&nbsp;</span></li>
              <li data-element="yttrium"><span class="bigfont1" aria-label="element">Yttrium</span></li>
              <li data-weight="88.906"><span class="bigfont1" aria-label="standard atomic weight 88 . 9 0 6">88.906</span></li>
-             <li data-groundstate="yttrium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="yttrium"><span class="bigfont1" aria-label="ground [Kr]4d5s2">[Kr]4d5s<sup>2</sup></span></li>
              <li data-ev="6.2173"><span class="bigfont1" aria-label="ionization energy 6 . 2 1 7 3">6.2173</span></li> 
           </ul>
        </td>
