--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
              <li data-symbol="sr" aria-label="atomic symbol S r" class="bigfont2">S<span class="letter-tight">r</span></li>
              <li data-element="strontium"><span class="bigfont1" aria-label="element">Strontium</span></li>
              <li data-weight="87.62"><span class="bigfont1" aria-label="standard atomic weight 87 . 6 2 8">87.62</span></li>
-             <li data-groundstate="strontium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="strontium"><span class="bigfont1" aria-label="ground [Kr]5s2">[Kr]5s<sup>2</sup></span></li>
              <li data-ev="5.6949"><span class="bigfont1" aria-label="ionization energy 5 . 6 9 4 9">5.6949</span></li> 
           </ul>
        </td>
