--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
              <li data-symbol="rb" aria-label="atomic symbol R b" class="bigfont2">R<span class="letter-tight">b</span></li>
              <li data-element="rubidium"><span class="bigfont1" aria-label="element">Rubidium</span></li>
              <li data-weight="85.468"><span class="bigfont1" aria-label="standard atomic weight 85.468">85.468</span></li>
-             <li data-groundstate="rubidium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="rubidium"><span class="bigfont1" aria-label="ground [Kr]5s">[Kr]5s</span></li>
              <li data-ev="4.1771"><span class="bigfont1" aria-label="ionization energy 4 . 1 7 7 1">4.1771</span></li> 
           </ul>
        </td>
