--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
              <li data-symbol="as" aria-label="atomic symbol A s" class="bigfont2">A<span class="letter-tight">s</span></li>
              <li data-element="arsenic"><span class="bigfont1" aria-label="element">Arsenic</span></li>
              <li data-weight="74.922"><span class="bigfont1" aria-label="standard atomic weight 74 . 9 2 2">74.922</span></li>
-             <li data-groundstate="arsenic"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="arsenic"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 3">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>3</sup></span></li>
              <li data-ev="9.7886"><span class="bigfont1" aria-label="ionization energy 9 . 7 8 8 6">9.7886</span></li> 
           </ul>
        </td>
