--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
              <li data-symbol="ge" aria-label="atomic symbol G e" class="bigfont2">G<span class="letter-tight">e</span></li>
              <li data-element="germanium"><span class="bigfont1" aria-label="element">Germanium</span></li>
              <li data-weight="72.630"><span class="bigfont1" aria-label="standard atomic weight 72 . 6 3 0">72.630</span></li>
-             <li data-groundstate="germanium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="germanium"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 2">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>2</sup></span></li>
              <li data-ev="7.8994"><span class="bigfont1" aria-label="ionization energy 7 . 8 9 9 4">7.8994</span></li> 
           </ul>
        </td>
