--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
              <li data-symbol="p" aria-label="atomic symbol P" class="bigfont2">P<span class="letter-tight">&nbsp;</span></li>
              <li data-element="phosphorus"><span class="bigfont1" aria-label="element">Phosphorus</span></li>
              <li data-weight="30.974"><span class="bigfont1" aria-label="standard atomic weight 30 . 9 7 4">30.974</span></li>
-             <li data-groundstate="phosphorus"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="phosphorus"><span class="bigfont1" aria-label="ground [Ne]3s23p3">[Ne]3s<sup>2</sup>3p<sup>3</sup></span></li>
              <li data-ev="10.4867"><span class="bigfont1" aria-label="ionization energy 10 . 4 8 6 7">10.4867</span></li> 
           </ul>
       </td>
