--- a/index_backup1.html
+++ b/index_backup1.html
@@ -267,7 +267,7 @@
              <li data-symbol="p" aria-label="atomic symbol P" class="bigfont2">P<span class="letter-tight">&nbsp;</span></li>
              <li data-element="phosphorus"><span class="bigfont1" aria-label="element">Phosphorus</span></li>
              <li data-weight="30.974"><span class="bigfont1" aria-label="standard atomic weight 30 . 9 7 4">30.974</span></li>
-             <li data-groundstate="phosphorus"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="phosphorus"><span class="bigfont1" aria-label="ground [Ne]3s23p3">[Ne]3s<sup>2</sup>3p<sup>3</sup></span></li>
              <li data-ev="10.4867"><span class="bigfont1" aria-label="ionization energy 10 . 4 8 6 7">10.4867</span></li> 
           </ul>
       </td>
@@ -439,7 +439,7 @@
              <li data-symbol="ge" aria-label="atomic symbol G e" class="bigfont2">G<span class="letter-tight">e</span></li>
              <li data-element="germanium"><span class="bigfont1" aria-label="element">Germanium</span></li>
              <li data-weight="72.630"><span class="bigfont1" aria-label="standard atomic weight 72 . 6 3 0">72.630</span></li>
-             <li data-groundstate="germanium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="germanium"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 2">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>2</sup></span></li>
              <li data-ev="7.8994"><span class="bigfont1" aria-label="ionization energy 7 . 8 9 9 4">7.8994</span></li> 
           </ul>
        </td>
@@ -449,7 +449,7 @@
              <li data-symbol="as" aria-label="atomic symbol A s" class="bigfont2">A<span class="letter-tight">s</span></li>
              <li data-element="arsenic"><span class="bigfont1" aria-label="element">Arsenic</span></li>
              <li data-weight="74.922"><span class="bigfont1" aria-label="standard atomic weight 74 . 9 2 2">74.922</span></li>
-             <li data-groundstate="arsenic"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="arsenic"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 3">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>3</sup></span></li>
              <li data-ev="9.7886"><span class="bigfont1" aria-label="ionization energy 9 . 7 8 8 6">9.7886</span></li> 
           </ul>
        </td>
