--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
              <li data-symbol="se" aria-label="atomic symbol S e" class="bigfont2">S<span class="letter-tight">e</span></li>
              <li data-element="selenium"><span class="bigfont1" aria-label="element">Selenium</span></li>
              <li data-weight="78.971"><span class="bigfont1" aria-label="standard atomic weight 78 . 9 7 1">78.971</span></li>
-             <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 4">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>4</sup></span></li>
              <li data-ev="9.7524"><span class="bigfont1" aria-label="ionization energy 9 . 7 5 2 4">9.7524</span></li> 
           </ul>
        </td>
