--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
              <li data-symbol="br" aria-label="atomic symbol B r" class="bigfont2">B<span class="letter-tight">r</span></li>
              <li data-element="bromine"><span class="bigfont1" aria-label="element">Bromine</span></li>
              <li data-weight="79.904"><span class="bigfont1" aria-label="standard atomic weight 79 . 9 0 4">79.904</span></li>
-             <li data-groundstate="bromine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="bromine"><span class="bigfont1" aria-label="ground [Ar]3d104s24p5">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>5</sup></span></li>
              <li data-ev="11.8138"><span class="bigfont1" aria-label="ionization energy 11 . 8 1 3 8">11.8138</span></li> 
           </ul>
        </td>
