--- a/index_backup2.html
+++ b/index_backup2.html
@@ -267,7 +267,7 @@
              <li data-symbol="p" aria-label="atomic symbol P" class="bigfont2">P<span class="letter-tight">&nbsp;</span></li>
              <li data-element="phosphorus"><span class="bigfont1" aria-label="element">Phosphorus</span></li>
              <li data-weight="30.974"><span class="bigfont1" aria-label="standard atomic weight 30 . 9 7 4">30.974</span></li>
-             <li data-groundstate="phosphorus"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="phosphorus"><span class="bigfont1" aria-label="ground [Ne]3s23p3">[Ne]3s<sup>2</sup>3p<sup>3</sup></span></li>
              <li data-ev="10.4867"><span class="bigfont1" aria-label="ionization energy 10 . 4 8 6 7">10.4867</span></li> 
           </ul>
       </td>
@@ -459,7 +459,7 @@
              <li data-symbol="se" aria-label="atomic symbol S e" class="bigfont2">S<span class="letter-tight">e</span></li>
              <li data-element="selenium"><span class="bigfont1" aria-label="element">Selenium</span></li>
              <li data-weight="78.971"><span class="bigfont1" aria-label="standard atomic weight 78 . 9 7 1">78.971</span></li>
-             <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 4">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>4</sup></span></li>
              <li data-ev="9.7524"><span class="bigfont1" aria-label="ionization energy 9 . 7 5 2 4">9.7524</span></li> 
           </ul>
        </td>
@@ -469,7 +469,7 @@
              <li data-symbol="br" aria-label="atomic symbol B r" class="bigfont2">B<span class="letter-tight">r</span></li>
              <li data-element="bromine"><span class="bigfont1" aria-label="element">Bromine</span></li>
              <li data-weight="79.904"><span class="bigfont1" aria-label="standard atomic weight 79 . 9 0 4">79.904</span></li>
-             <li data-groundstate="bromine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="bromine"><span class="bigfont1" aria-label="ground [Ar]3d104s24p5">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>5</sup></span></li>
              <li data-ev="11.8138"><span class="bigfont1" aria-label="ionization energy 11 . 8 1 3 8">11.8138</span></li> 
           </ul>
        </td>
