--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
              <li data-symbol="kr" aria-label="atomic symbol K r" class="bigfont2">K<span class="letter-tight">r</span></li>
              <li data-element="krypton"><span class="bigfont1" aria-label="element">Krypton</span></li>
              <li data-weight="83.798"><span class="bigfont1" aria-label="standard atomic weight 83 . 7 9 8">83.798</span></li>
-             <li data-groundstate="krypton"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="krypton"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 6">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>6</sup></span></li>
              <li data-ev="13.9996"><span class="bigfont1" aria-label="ionization energy 13 . 9 9 9 6">13.9996</span></li> 
           </ul>
        </td>
