--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
              <li data-symbol="mg" aria-label="atomic symbol M g" class="bigfont2">M<span class="letter-tight">g</span></li>
              <li data-element="magnesium"><span class="bigfont1" aria-label="element">Magnesium</span></li>
              <li data-weight="24.305"><span class="bigfont1" aria-label="standard atomic weight 24 . 3 0 5">24.305</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2">[Ne]3s<sup>2</sup></span></li>
              <li data-ev="7.6462"><span class="bigfont1" aria-label="ionization energy 7 . 6 4 6 2">7.6462</span></li> 
           </ul>
       </td>
