--- a/index_backup1.html
+++ b/index_backup1.html
@@ -227,7 +227,7 @@
              <li data-symbol="mg" aria-label="atomic symbol M g" class="bigfont2">M<span class="letter-tight">g</span></li>
              <li data-element="magnesium"><span class="bigfont1" aria-label="element">Magnesium</span></li>
              <li data-weight="24.305"><span class="bigfont1" aria-label="standard atomic weight 24 . 3 0 5">24.305</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2">[Ne]3s<sup>2</sup></span></li>
              <li data-ev="7.6462"><span class="bigfont1" aria-label="ionization energy 7 . 6 4 6 2">7.6462</span></li> 
           </ul>
       </td>
@@ -459,7 +459,7 @@
              <li data-symbol="se" aria-label="atomic symbol S e" class="bigfont2">S<span class="letter-tight">e</span></li>
              <li data-element="selenium"><span class="bigfont1" aria-label="element">Selenium</span></li>
              <li data-weight="78.971"><span class="bigfont1" aria-label="standard atomic weight 78 . 9 7 1">78.971</span></li>
-             <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 4">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>4</sup></span></li>
              <li data-ev="9.7524"><span class="bigfont1" aria-label="ionization energy 9 . 7 5 2 4">9.7524</span></li> 
           </ul>
        </td>
@@ -469,7 +469,7 @@
              <li data-symbol="br" aria-label="atomic symbol B r" class="bigfont2">B<span class="letter-tight">r</span></li>
              <li data-element="bromine"><span class="bigfont1" aria-label="element">Bromine</span></li>
              <li data-weight="79.904"><span class="bigfont1" aria-label="standard atomic weight 79 . 9 0 4">79.904</span></li>
-             <li data-groundstate="bromine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="bromine"><span class="bigfont1" aria-label="ground [Ar]3d104s24p5">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>5</sup></span></li>
              <li data-ev="11.8138"><span class="bigfont1" aria-label="ionization energy 11 . 8 1 3 8">11.8138</span></li> 
           </ul>
        </td>
@@ -479,7 +479,7 @@
              <li data-symbol="kr" aria-label="atomic symbol K r" class="bigfont2">K<span class="letter-tight">r</span></li>
              <li data-element="krypton"><span class="bigfont1" aria-label="element">Krypton</span></li>
              <li data-weight="83.798"><span class="bigfont1" aria-label="standard atomic weight 83 . 7 9 8">83.798</span></li>
-             <li data-groundstate="krypton"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="krypton"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 6">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>6</sup></span></li>
              <li data-ev="13.9996"><span class="bigfont1" aria-label="ionization energy 13 . 9 9 9 6">13.9996</span></li> 
           </ul>
        </td>
