--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
              <li data-symbol="na" aria-label="atomic symbol N a" class="bigfont2">N<span class="letter-tight">a</span></li>
              <li data-element="sodium"><span class="bigfont1" aria-label="element">Sodium</span></li>
              <li data-weight="22.990"><span class="bigfont1" aria-label="standard atomic weight 22 . 9 9 0">22.990</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s">[Ne]3s</span></li>
              <li data-ev="5.1391"><span class="bigfont1" aria-label="ionization energy 5 . 1 3 9 1">5.1391</span></li> 
           </ul>
       </td>
