--- a/index.html
+++ b/index.html
@@ -1420,20 +1420,20 @@ var text;
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 6"  + "<br/>"
-        + "Standard Atomic Weight:  10.81"  + "<br/>"
+        + "Standard Atomic Weight:   12.011"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 11.2603"  + "<br/>"
         + "<br/>";
    } else if (letter === "NITROGEN") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Carbon" + "</strong>"
+        + "<strong>" + "Nitrogen" + "</strong>"
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 6"  + "<br/>"
-        + "Standard Atomic Weight:  10.81"  + "<br/>"
-        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
-        + "Ionization Energy: 11.2603"  + "<br/>"
+        + "Standard Atomic Weight:   14.007"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
+        + "Ionization Energy: 14.5341"  + "<br/>"
         + "<br/>";
 
    // If the letter is anything else
