--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
              <li data-symbol="n" aria-label="atomic symbol N" class="bigfont2">N<span class="letter-tight">&nbsp;</span></li>
              <li data-element="nitrogen"><span class="bigfont1" aria-label="element">Nitrogen</span></li>
              <li data-weight="14.007"><span class="bigfont1" aria-label="standard atomic weight 14 . 0 0 7">14.007</span></li>
-             <li data-groundstate="nitrogen"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="nitrogen"><span class="bigfont1" aria-label="ground 1s22s22p3">1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup></span></li>
              <li data-ev="14.5341"><span class="bigfont1" aria-label="ionization energy 14 . 5 3 4 1">14.5341</span></li> 
           </ul>
        </td>
@@ -1425,6 +1425,17 @@ var text;
         + "Ionization Energy: 11.2603"  + "<br/>"
         + "<br/>";
    } else if (letter === "NITROGEN") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Nitrogen" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 7"  + "<br/>"
+        + "Standard Atomic Weight:   14.007"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
+        + "Ionization Energy: 14.5341"  + "<br/>"
+        + "<br/>";
+    } else if (letter === "OXYGEN") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Nitrogen" + "</strong>"
