--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
              <li data-symbol="o" aria-label="atomic symbol O" class="bigfont2">O<span class="letter-tight">&nbsp;</span></li>
              <li data-element="oxygen"><span class="bigfont1" aria-label="element">Oxygen</span></li>
              <li data-weight="15.999"><span class="bigfont1" aria-label="standard atomic weight 15 . 9 9 9">15.999</span></li>
-             <li data-groundstate="oxygen"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="oxygen"><span class="bigfont1" aria-label="ground 1s 2 2s 2 2p 4">1s<sup>2</sup> 2s<sup>2</sup>2p<sup>4</sup></span></li>
              <li data-ev="13.6181"><span class="bigfont1" aria-label="ionization energy 13 . 6 1 8 1">13.6181</span></li> 
           </ul>
        </td>
@@ -1435,7 +1435,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 14.5341"  + "<br/>"
         + "<br/>";
-    } else if (letter === "OXYGEN") {
+   } else if (letter === "OXYGEN") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Nitrogen" + "</strong>"
