--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s" + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
@@ -1371,7 +1370,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Helium" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 2"  + "<br/>"
         + "Standard Atomic Weight: 4.0026"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
@@ -1383,7 +1381,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Lithium" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 3"  + "<br/>"
         + "Standard Atomic Weight:  6.94"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
@@ -1395,7 +1392,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Beryllium" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 4"  + "<br/>"
         + "Standard Atomic Weight: 9.0122"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
@@ -1407,7 +1403,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Boron" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 5"  + "<br/>"
         + "Standard Atomic Weight:  10.81"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
@@ -1418,7 +1413,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Carbon" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 6"  + "<br/>"
         + "Standard Atomic Weight:   12.011"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
@@ -1429,7 +1423,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Nitrogen" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 7"  + "<br/>"
         + "Standard Atomic Weight:   14.007"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
@@ -1438,13 +1431,12 @@ var text;
    } else if (letter === "OXYGEN") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Nitrogen" + "</strong>"
+        + "<strong>" + "Oxygen" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 7"  + "<br/>"
-        + "Standard Atomic Weight:   14.007"  + "<br/>"
-        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
-        + "Ionization Energy: 14.5341"  + "<br/>"
+        + "Atomic Number: 8"  + "<br/>"
+        + "Standard Atomic Weight:   15.999"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
+        + "Ionization Energy: 13.6181"  + "<br/>"
         + "<br/>";
 
    // If the letter is anything else
