--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
              <li data-symbol="f" aria-label="atomic symbol F" class="bigfont2">F<span class="letter-tight">&nbsp;</span></li>
              <li data-element="flourine"><span class="bigfont1" aria-label="element">Flourine</span></li>
              <li data-weight="18.998"><span class="bigfont1" aria-label="standard atomic weight 18. 9 9 8 9">18.998</span></li>
-             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground 1s2 2s2 2p5">1s<sup>2</sup>2s<sup>2</sup> 2p<sup>5</sup></span></li>
              <li data-ev="17.4228"><span class="bigfont1" aria-label="ionization energy 17 . 4 2 2 8">17.4228</span></li> 
           </ul>
        </td>
@@ -1437,6 +1437,16 @@ var text;
         + "Standard Atomic Weight:   15.999"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 13.6181"  + "<br/>"
+        + "<br/>";
+     } else if (letter === "FLOURINE") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Flourine" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 9"  + "<br/>"
+        + "Standard Atomic Weight: 18.998"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
+        + "Ionization Energy: 17.4228"  + "<br/>"
         + "<br/>";
 
    // If the letter is anything else
