--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,16 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
         + "Ionization Energy: 17.4228"  + "<br/>"
         + "<br/>";
-
+     } else if (letter === "NEON") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Neon" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 10"  + "<br/>"
+        + "Standard Atomic Weight: 18.998"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
+        + "Ionization Energy: 17.4228"  + "<br/>"
+        + "<br/>";
    // If the letter is anything else
       
    // If the letter is "b" or "d"
