--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
              <li data-symbol="ne" aria-label="atomic symbol N e" class="bigfont2">N<span class="letter-tight">e</span></li>
              <li data-element="neon"><span class="bigfont1" aria-label="element">Neon</span></li>
              <li data-weight="20.180"><span class="bigfont1" aria-label="standard atomic weight 20 . 1 8 0">20.180</span></li>
-             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground 1s 2 2s 2 2p 6">1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup></span></li>
              <li data-ev="21.5645"><span class="bigfont1" aria-label="ionization energy 21 . 5 6 4 5">21.5645</span></li> 
           </ul>
        </td>
@@ -1455,9 +1455,20 @@ var text;
         + "<br/>" 
         + "Atomic Number: 10"  + "<br/>"
         + "Standard Atomic Weight: 18.998"  + "<br/>"
-        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
-        + "Ionization Energy: 17.4228"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
+        + "Ionization Energy: 21.5645"  + "<br/>"
         + "<br/>";
+      } else if (letter === "N.....") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Neon" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 10"  + "<br/>"
+        + "Standard Atomic Weight: 20.180"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
+        + "Ionization Energy: 17.4228"  + "<br/>"
+        + "<br/>";      
+        
    // If the letter is anything else
       
    // If the letter is "b" or "d"
