--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
              <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
              <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
              <li data-weight="35.45"><span class="bigfont1" aria-label="standard atomic weight 35 . 4 5">35.45</span></li>
-             <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 5">[Ne]3s<sup>2</sup>3p<sup>5</sup></span></li>
              <li data-ev="12.9676"><span class="bigfont1" aria-label="ionization energy 12 . 9 6 7 6">12.9676</span></li> 
           </ul>
       </td>
