--- a/index_backup1.html
+++ b/index_backup1.html
@@ -195,7 +195,7 @@
              <li data-symbol="f" aria-label="atomic symbol F" class="bigfont2">F<span class="letter-tight">&nbsp;</span></li>
              <li data-element="flourine"><span class="bigfont1" aria-label="element">Flourine</span></li>
              <li data-weight="18.998"><span class="bigfont1" aria-label="standard atomic weight 18. 9 9 8 9">18.998</span></li>
-             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground 1s2 2s2 2p5">1s<sup>2</sup>2s<sup>2</sup> 2p<sup>5</sup></span></li>
              <li data-ev="17.4228"><span class="bigfont1" aria-label="ionization energy 17 . 4 2 2 8">17.4228</span></li> 
           </ul>
        </td>
@@ -205,7 +205,7 @@
              <li data-symbol="ne" aria-label="atomic symbol N e" class="bigfont2">N<span class="letter-tight">e</span></li>
              <li data-element="neon"><span class="bigfont1" aria-label="element">Neon</span></li>
              <li data-weight="20.180"><span class="bigfont1" aria-label="standard atomic weight 20 . 1 8 0">20.180</span></li>
-             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground 1s 2 2s 2 2p 6">1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup></span></li>
              <li data-ev="21.5645"><span class="bigfont1" aria-label="ionization energy 21 . 5 6 4 5">21.5645</span></li> 
           </ul>
        </td>
@@ -287,7 +287,7 @@
              <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
              <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
              <li data-weight="35.45"><span class="bigfont1" aria-label="standard atomic weight 35 . 4 5">35.45</span></li>
-             <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 5">[Ne]3s<sup>2</sup>3p<sup>5</sup></span></li>
              <li data-ev="12.9676"><span class="bigfont1" aria-label="ionization energy 12 . 9 6 7 6">12.9676</span></li> 
           </ul>
       </td>
@@ -1438,7 +1438,37 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 13.6181"  + "<br/>"
         + "<br/>";
-
+     } else if (letter === "FLOURINE") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Flourine" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 9"  + "<br/>"
+        + "Standard Atomic Weight: 18.998"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
+        + "Ionization Energy: 17.4228"  + "<br/>"
+        + "<br/>";
+     } else if (letter === "NEON") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Neon" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 10"  + "<br/>"
+        + "Standard Atomic Weight: 18.998"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
+        + "Ionization Energy: 21.5645"  + "<br/>"
+        + "<br/>";
+      } else if (letter === "N.....") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Neon" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 10"  + "<br/>"
+        + "Standard Atomic Weight: 20.180"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
+        + "Ionization Energy: 17.4228"  + "<br/>"
+        + "<br/>";      
+        
    // If the letter is anything else
       
    // If the letter is "b" or "d"
