--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
              <li data-symbol="s" aria-label="atomic symbol S" class="bigfont2">S<span class="letter-tight">&nbsp;</span></li>
              <li data-element="sulfur"><span class="bigfont1" aria-label="element">Sulfur</span></li>
              <li data-weight="32.06"><span class="bigfont1" aria-label="standard atomic weight 32  .0 6">32.06</span></li>
-             <li data-groundstate="sulfur"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sulfur"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 4">[Ne]3s<sup>2</sup>3p<sup>4</sup></span></li>
              <li data-ev="10.3600"><span class="bigfont1" aria-label="ionization energy 10 . 3 6 0 0">10.3600</span></li> 
           </ul>
       </td>
