--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
              <li data-symbol="si" aria-label="atomic symbol S i" class="bigfont2">S<span class="letter-tight">i</span></li>
              <li data-element="silicon"><span class="bigfont1" aria-label="element">Silicon</span></li>
              <li data-weight="28.085"><span class="bigfont1" aria-label="standard atomic weight 28 . 0 8 5">28.085</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 2">[Ne]3s<sup>2</sup>3p<sup>2</sup></span></li>
              <li data-ev="8.1517"><span class="bigfont1" aria-label="ionization energy 8 . 1 5 1 7">8.1517</span></li> 
           </ul>
       </td>
