--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
              <li data-symbol="al" aria-label="atomic symbol A l" class="bigfont2">A<span class="letter-tight">l</span></li>
              <li data-element="magnesium"><span class="bigfont1" aria-label="element">Aluminum</span></li>
              <li data-weight="26.982"><span class="bigfont1" aria-label="standard atomic weight 26 . 9 8 2 5">26.982</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p">[Ne]3s<sup>2</sup>3p</span></li>
              <li data-ev="5.9858"><span class="bigfont1" aria-label="ionization energy 5 . 9 8 5 8">5.9858</span></li> 
           </ul>
       </td>
